--- a/firebase-get-to-know-flutter/step_02/pubspec.yaml
+++ b/firebase-get-to-know-flutter/step_02/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  cloud_firestore: ^1.0.0 # new
+  firebase_auth: ^1.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
